--- a/core/template/scenario/cmd.action.slider.default.html
+++ b/core/template/scenario/cmd.action.slider.default.html
@@ -7,9 +7,9 @@
 </div>
 
 <script>
-  $('.listCmdInfo[data-uid=#uid#]').off('click').on('click', function() {
+  $('.listCmdInfo[data-uid="#uid#"]').off('click').on('click', function() {
     jeedom.cmd.getSelectModal({cmd: {type: 'info'}}, function(result) {
-      $('.expressionAttr[data-l1key=options][data-l2key=slider][data-uid=#uid#]').atCaret('insert', result.human);
-    });
-  });
+      document.querySelector('.expressionAttr[data-l1key="options"][data-l2key="slider"][data-uid="#uid#"]').insertAtCursor(result.human)
+    })
+  })
 </script>
