--- a/core/template/scenario/event.default.html
+++ b/core/template/scenario/event.default.html
@@ -11,14 +11,14 @@
 	</span>
 </div>
 <script>
-	$('.listCmdInfo[data-uid=#uid#]').off().on('click', function () {
+	$('.listCmdInfo[data-uid="#uid#"]').off().on('click', function () {
 		jeedom.cmd.getSelectModal({cmd: {type: 'info'}}, function (result) {
-			$('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=cmd]').value(result.human);
-		});
-	});
-	$('.listCmdInfo2[data-uid=#uid#]').off().on('click', function () {
+			document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key="cmd"]').value = result.human
+		})
+	})
+	$('.listCmdInfo2[data-uid="#uid#"]').off().on('click', function () {
 		jeedom.cmd.getSelectModal({cmd: {type: 'info'}}, function (result) {
-			$('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=value]').atCaret('insert', result.human);
-		});
-	});
+			document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key="value"]').insertAtCursor(result.human)
+		})
+	})
 </script>
