--- a/core/template/scenario/alert.default.html
+++ b/core/template/scenario/alert.default.html
@@ -17,13 +17,13 @@
 </div>
 
 <script>
-  if ('#level#' != '' && $('.expressionAttr[data-option_id=#id#][data-uid=#uid#][data-l1key=options][data-l2key=level] option[value=#level#]').html() != undefined) {
-    $('.expressionAttr[data-option_id=#id#][data-uid=#uid#][data-l1key=options][data-l2key=level]').value('#level#');
+  if ('#level#' != '' && document.querySelector('.expressionAttr[data-option_id="#id#"][data-uid="#uid#"][data-l1key="options"][data-l2key="level"] option[value="#level#"]')?.innerHTML != '') {
+    document.querySelector('.expressionAttr[data-option_id="#id#"][data-uid="#uid#"][data-l1key="options"][data-l2key="level"]').value = '#level#'
   }
-  $('.listCmdInfo[data-uid=#uid#]').off('click').on('click', function() {
+  $('.listCmdInfo[data-uid="#uid#"]').off('click').on('click', function() {
     jeedom.cmd.getSelectModal({cmd: {type: 'info'}}, function(result) {
-      $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=message]').atCaret('insert', result.human);
-    });
-  });
-  autosize($('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=message]'));
+      document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key="message"]').insertAtCursor(result.human)
+    })
+  })
+  autosize($('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key="message"]'))
 </script>
