--- a/core/template/scenario/popup.default.html
+++ b/core/template/scenario/popup.default.html
@@ -9,7 +9,7 @@
 <script>
   $('.listCmdInfo[data-uid=#uid#]').off('click').on('click', function() {
     jeedom.cmd.getSelectModal({cmd: {type: 'info'}}, function(result) {
-      $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=message]').atCaret('insert', result.human);
-    });
-  });
+      document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key="message"]').insertAtCursor(result.human)
+    })
+  })
 </script>
