--- a/core/template/scenario/wait.default.html
+++ b/core/template/scenario/wait.default.html
@@ -13,7 +13,7 @@
 <script>
   $('.listCmdInfo[data-uid=#uid#]').off('click').on('click', function () {
     jeedom.cmd.getSelectModal({cmd: {type: 'info'}}, function (result) {
-      $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=condition]').atCaret('insert', result.human);
-    });
-  });
+      document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key="condition"]').insertAtCursor(result.human)
+    })
+  })
 </script>
