end scenario templates js

--- a/core/template/scenario/ask.default.html
+++ b/core/template/scenario/ask.default.html
@@ -24,9 +24,9 @@
 </div>
 
 <script>
-  $('.listCmdAction[data-uid=#uid#]').off('click').on('click', function() {
-    jeedom.cmd.getSelectModal({cmd: {type: 'action',subType : 'message'}}, function(result) {
-      $('.expressionAttr[data-l1key=options][data-l2key=cmd][data-uid=#uid#]').value(result.human);
-    });
-  });
+  $('.listCmdAction[data-uid="#uid#"]').off('click').on('click', function() {
+    jeedom.cmd.getSelectModal({cmd: {type: 'action', subType: 'message'}}, function(result) {
+      document.querySelector('.expressionAttr[data-l1key="options"][data-l2key="cmd"][data-uid="#uid#"]').value = result.human
+    })
+  })
 </script>
