--- a/core/template/scenario/widget.default.html
+++ b/core/template/scenario/widget.default.html
@@ -8,12 +8,12 @@
 </select>
 
 <script>
-  if ($('.expressionAttr[data-option_id=#id#][data-uid=#uid#][data-l1key=options][data-l2key=action] option[value=#action#]').html() != undefined) {
-    $('.expressionAttr[data-option_id=#id#][data-uid=#uid#][data-l1key=options][data-l2key=action]').value('#action#');
+  if (document.querySelector('.expressionAttr[data-option_id=#id#][data-uid="#uid#"][data-l1key="options"][data-l2key="action"] option[value="#action#"]')?.innerHTML != '') {
+    document.querySelector('.expressionAttr[data-option_id=#id#][data-uid="#uid#"][data-l1key="options"][data-l2key="action"]').value = '#action#'
   }
-  $('.listCmdInfo[data-uid=#uid#]').on('click', function() {
+  $('.listCmdInfo[data-uid="#uid#"]').on('click', function() {
     jeedom.eqLogic.getSelectModal({cmd: {type: 'info'}}, function(result) {
-      $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=eqLogic]').value(result.human);
-    });
-  });
+      document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key="eqLogic"]').value = result.human
+    })
+  })
 </script>
