--- a/core/template/scenario/cmd.action.select.default.html
+++ b/core/template/scenario/cmd.action.select.default.html
@@ -2,6 +2,6 @@
 	<span class="input-group-addon roundedLeft" style="width: 100px">#name_display#</span>
 	<select class="form-control input-sm expressionAttr roundedRight" data-l1key="options" data-l2key="select" data-cmd_id="#id#" data-uid="#uid#">#listValue#</select>
 	<script>
-		$('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=select]').value('#select#');
+		document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key="select"]').value = '#select#'
 	</script>
 </div>
