--- a/core/template/scenario/equipement.default.html
+++ b/core/template/scenario/equipement.default.html
@@ -13,12 +13,12 @@
   </select>
 </div>
 <script>
-  $('.listEquipementInfo[data-uid=#uid#]').off('click').on('click', function() {
+  $('.listEquipementInfo[data-uid="#uid#"]').off('click').on('click', function() {
     jeedom.eqLogic.getSelectModal({cmd: {type: 'info'}}, function(result) {
-      $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=eqLogic]').value(result.human);
+      document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key=""eqLogic""]').value = result.human
     });
   });
-  if ('#action#' != '' && $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=action] option[value=#action#]').html() != undefined) {
-    $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=action]').value('#action#');
+  if ('#action#' != '' && document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key=action] option[value="#action#"]')?.innerHTML != '') {
+    document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key="action"]').value = '#action#'
   }
 </script>
