--- a/core/template/scenario/scenario.default.html
+++ b/core/template/scenario/scenario.default.html
@@ -16,8 +16,8 @@
   <textarea class="tags expressionAttr form-control ta_autosize roundedRight" data-l1key="options" data-l2key="tags" rows="1" data-cmd_id="#id#" data-uid="#uid#" style="resize:vertical;" placeholder="{{Tags}}">#tags#</textarea>
 </div>
 <script>
-  if ('#action#' != '' && $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=action] option[value=#action#]').html() != undefined) {
-    $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=action]').value('#action#');
+  if ('#action#' != '' && document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key="action"] option[value="#action#"]')?.innerHTML != '') {
+    document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key="action"]').value = '#action#'
   }
   jeedom.scenario.allOrderedByGroupObjectName({
     asGroup: 0,
@@ -25,15 +25,18 @@
       $.fn.showAlert({message: error.message, level: 'danger'});
     },
     success: function (scenarios) {
-      var options = '';
-      options += '<option value="-1">{{Aucun}}</option>';
+      var select = document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key="scenario_id"]')
+      var newOption
       for (var i in scenarios) {
-        options += '<option value="' + scenarios[i].id + '">' + scenarios[i].humanName + '</option>';
+        newOption = document.createElement('option')
+        newOption.text = scenarios[i].humanName
+        newOption.value = scenarios[i].id
+        select.appendChild(newOption)
       }
-      $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=scenario_id]').append(options);
-      if ('#scenario_id#' != '' && $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=scenario_id] option[value=#scenario_id#]').html() != undefined) {
-        $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=scenario_id]').value('#scenario_id#');
+
+      if ('#scenario_id#' != '' &&document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key="scenario_id"] option[value="#scenario_id#"]')?.innerHTML != '') {
+        document.querySelector('.expressionAttr[data-uid="#uid#"][data-l1key="options"][data-l2key="scenario_id"]').value = '#scenario_id#'
       }
     }
-  });
+  })
 </script>
